[gd_scene load_steps=4 format=3 uid="uid://53bn22cjs3s7"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_wrbul"]
[ext_resource type="FontFile" uid="uid://cl2j3sd1wf5ch" path="res://Assets/Fonts/Chewy-Regular.ttf" id="2_b5bqd"]
[ext_resource type="Theme" uid="uid://bne2hom5bb0sj" path="res://Theme/DefaultButton.tres" id="3_tatqy"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_wrbul")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152758, 0.152782, 0.232614, 1)

[node name="Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titolo" type="Label" parent="CanvasLayer/Menu"]
modulate = Color(1, 0.843137, 0, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -119.5
offset_top = 30.0
offset_right = 119.5
offset_bottom = 60.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_b5bqd")
theme_override_font_sizes/font_size = 70
text = "Slime Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -160.5
offset_right = 90.0
offset_bottom = -100.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("3_tatqy")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="HowToPlay" type="Button" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -80.5
offset_right = 90.0
offset_bottom = -20.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("3_tatqy")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "How To Play
"

[node name="OptionButton" type="Button" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -0.5
offset_right = 90.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("3_tatqy")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="ExitButton" type="Button" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 79.5
offset_right = 90.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = ExtResource("3_tatqy")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Esci"

[connection signal="pressed" from="CanvasLayer/Menu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/ExitButton" to="." method="_on_exit_button_pressed"]
